--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,10 @@
 title: systemPipeChIPseq
 url: http://girke.bioinformatics.ucr.edu/systemPipeR/
-
 authors:
    Daniela Cassol:
      href: https://www.dcassol.com/
    Thomas Girke:
      href: http://girke.bioinformatics.ucr.edu/
-
 home:
   links:
   - text: Download from Bioconductor
@@ -15,7 +13,6 @@ home:
     href: https://support.bioconductor.org/
   - text: Report a bug
     href: https://github.com/tgirke/systemPipeR/issues
-
 template:
   params:
     docsearch:
@@ -23,26 +20,14 @@ template:
 #      index_name: 
        bootswatch: flatly
     ganalytics: UA-158796879-1
-
 navbar:
-  structure:
-    left:
-    - home
-    right: 
-    - github
-  components:
-    home:
-      icon: fas fa-home fa-lg
+  title: "systemPipeChIPseq"
+  left:
+    - text: "Home"
       href: index.html
-    articles:
-      text: Workflow
-      icon: fas fa-book
+    - text: "Workflow"
       href: articles/systemPipeChIPseq.html
-    reference:
-    - title: "systemPipeR"
-      desc: >
-        Find here help...
-    github:
-      icon: fa-github fa-lg
-      href: https://github.com/tgirke/systemPipeR
-
+      icon: fas fa-book
+  right:
+    - icon: fa-github fa-lg
+      href: https://github.com/systemPipeR/systemPipeChIPseq
