--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: '2.5'
-pkgdown: 1.5.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-04-30T03:09Z
+articles:
+  systemPipeChIPseq: systemPipeChIPseq.html
+last_built: 2020-10-15T06:39Z
 urls:
   reference: http://girke.bioinformatics.ucr.edu/systemPipeR//reference
   article: http://girke.bioinformatics.ucr.edu/systemPipeR//articles
