--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,8 @@
 pandoc: '2.5'
-pkgdown: 1.6.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
-articles:
-  systemPipeChIPseq: systemPipeChIPseq.html
-last_built: 2020-10-15T06:39Z
+articles: []
+last_built: 2020-10-15T06:44Z
 urls:
   reference: http://girke.bioinformatics.ucr.edu/systemPipeR//reference
   article: http://girke.bioinformatics.ucr.edu/systemPipeR//articles
