--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: '2.13'
+pandoc: 2.7.3
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   SPchipseq: SPchipseq.html
-last_built: 2022-04-11T05:57Z
+last_built: 2022-04-15T17:47Z
 urls:
   reference: https://systempipe.org/SPchipseq/reference
   article: https://systempipe.org/SPchipseq/articles
